--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+      - run: npm install
       - run: npm ci
       - run: npm test
    
